--- a/codegen.yml
+++ b/codegen.yml
@@ -1,12 +1,21 @@
 overwrite: true
 schema: hasura/schema.graphql
-documents: 'libs/graphql/*.graphql'
+documents: ['libs/graphql/*.graphql']
 generates:
   libs/graphql/generated/graphql.tsx:
     plugins:
-      - typescript
-      - typescript-operations
-      - typescript-react-apollo
+      - 'typescript'
+      - 'typescript-operations'
+      - 'typescript-react-apollo'
+    config:
+      withHooks: true
+      withRefetchFn: false
+      withComponent: false
+      withMutationOptionsType: true
+      withMutationFn: true
+      addDocBlocks: true
+      addOperationExport: true
+      withResultType: true
 #  tools/sdk/index.ts:
 #    plugins:
 #      - typescript
