--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -46,6 +46,11 @@ pipelines:
                 - yarn lint:tsc --with-deps --base=origin/master
                 - yarn lint:ls || true
                 - yarn lint:workspace || true
+                - npm i -g graphql-inspector || true
+                - graphql-inspector validate "{libs,apps}/**/*.{graphql,tsx}" hasura/schema.graphql || true
+                - graphql-inspector coverage "{libs,apps}/**/*.{graphql,tsx}" hasura/schema.graphql || true
+                - graphql-inspector similar hasura/schema.graphql || true
+                - graphql-inspector diff 'git:origin/master:./hasura/schema.graphql' 'hasura/schema.graphql' || true
 
           - step:
               name: lint
