--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "nx": "cross-env NODE_OPTIONS='--max-old-space-size=4096' nx",
     "serve": "nx serve",
     "vercel": "vercel",
-    "apollo": "npx apollo",
+    "apollo": "ts-node tools/cli/apollo.ts",
     "build:bridge-api": "nx export bridge-api",
-    "hasura:cli": "env-cmd -f ./hasura/.env hasura --project hasura",
+    "hasura:cli": "ts-node tools/cli/hasura.ts",
     "nest": "cd apps/backend && nest",
-    "clean": "rimraf **/node_modules",
+    "clean": "rimraf **/node_modules yarn.lock package-lock.json",
     "web:start": "nx serve web",
     "start:linux": "yarn dev:linux",
     "start:windows": "yarn dev:windows",
@@ -32,7 +32,7 @@
     "hasura:start:linux": "docker-compose -f hasura/docker-compose.linux.yml up -d postgres && delay 10 && docker-compose -f hasura/docker-compose.linux.yml up --force-recreate graphql-engine",
     "hasura:stop": "docker-compose -f hasura/docker-compose.yml down -t 5",
     "hasura:clean": "docker-compose -f hasura/docker-compose.yml down -v",
-    "hasura:export": "yarn hasura:cli metadata export && yarn apollo client:download-schema hasura/schema.graphql",
+    "hasura:export": "yarn hasura:cli metadata export && yarn apollo client:download-schema hasura/schema.graphql && yarn graphql-codegen",
     "graphql-codegen": "graphql-codegen",
     "production:start": "nx affected --uncommitted=true --target=export && npx serve dist/apps/web/exported",
     "build": "pwd && ls -al && rm -rf public/ && nx build backend --no-cache && cp -rf dist/apps/backend/ public/ && cp apps/backend/vercel.json public/ && cp package.json public/",
@@ -213,6 +213,7 @@
     "@testing-library/react": "11.2.6",
     "@testing-library/react-native": "7.2.0",
     "@types/cookie-session": "2.0.42",
+    "@types/dotenv-flow": "^3.1.0",
     "@types/jest": "^26.0.23",
     "@types/jsonwebtoken": "8.5.1",
     "@types/node": "15.0.2",
@@ -233,6 +234,7 @@
     "concurrently": "6.1.0",
     "cypress": "^6",
     "dotenv": "9.0.2",
+    "dotenv-flow": "^3.2.0",
     "eslint": "7.26.0",
     "eslint-config-canonical": "26.2.3",
     "eslint-config-prettier": "8.3.0",
