--- a/tools/tsconfig.json
+++ b/tools/tsconfig.json
@@ -3,7 +3,7 @@
   "compilerOptions": {
     "outDir": "../dist/out-tsc/tools",
     "rootDir": ".",
-    "module": "commonjs",
+    "module": "ES2020",
     "target": "es5",
     "types": ["node"]
   },
