--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -137,6 +137,7 @@ pipelines:
             - |
               printf ":shallow_pan_of_food::shallow_pan_of_food: *New PR Preview*\n## <https://bitbucket.org/pabau/monorepo/pull-requests/${BITBUCKET_PR_ID}|PR ${BITBUCKET_PR_ID}> committed by ${COMMIT_AUTHOR}\n${LAST_COMMIT_LOG}\n\n" > /tmp/bot_message2.txt
               npm i -g ts-node && ts-node tools/cicd/PrintChangedUrls.ts "origin/master" "$(cat /tmp/bot_url_web.txt || echo '')" "$(cat /tmp/bot_url_ui.txt || echo '')" >> /tmp/bot_message2.txt
+              printf "\n" >> /tmp/bot_message2.txt
               cat /tmp/bot_message.txt >> /tmp/bot_message2.txt || true
               printf "\n" >> /tmp/bot_message2.txt
 
@@ -162,10 +163,29 @@ pipelines:
 
             # Post to Slack
             - |
-              jq --arg var "$(cat dist/bot_message2.txt | head -c 2900)$(cat dist/bot_message.txt | head -c 2900)" '.blocks[0].text.text = $var' tools/cicd/slack_notification.json | curl -0 "${SLACK_HOOK_URL}" \
-              -H "Expect:" \
-              -H 'Content-Type: application/json; charset=utf-8' \
-              --data-binary @-
+              jq --arg var "$(cat dist/bot_message2.txt | head -c 2900)$(cat dist/bot_message.txt | head -c 2900)" '.blocks[0].text.text = $var' tools/cicd/slack_notification.json | \
+                curl -0 "${SLACK_HOOK_URL}" \
+                -H "Expect:" \
+                -H 'Content-Type: application/json; charset=utf-8' \
+                --data-binary @-
+
+            # Configure git to use the oauth token.
+            - |
+              curl -sS -H "Authorization: Bearer ${access_token}" "https://api.bitbucket.org/2.0/repositories/${BITBUCKET_REPO_OWNER}/${BITBUCKET_REPO_SLUG}/pullrequests/${BITBUCKET_PR_ID}"
+              export PR_AUTHOR=$(curl -sS -H "Authorization: Bearer ${access_token}" "https://api.bitbucket.org/2.0/repositories/${BITBUCKET_REPO_OWNER}/${BITBUCKET_REPO_SLUG}/pullrequests/${BITBUCKET_PR_ID}" | jq -r '.author.display_name')
+              export COMMIT_AUTHOR=$(git log -1 --pretty=format:'%an')
+
+            # Post to Bitbucket PR
+            - |
+              curl https://api.bitbucket.org/2.0/repositories/pabau/monorepo/pullrequests/${BITBUCKET_PR_ID}/comments \
+                -H "Authorization: Bearer ${access_token}" \
+                --request POST \
+                --header 'Content-Type: application/json' \
+                --data '{
+                  "content": {
+                    "raw": "A new vercel was published!"
+                  }
+                }'
 
   branches:
     master:
@@ -319,6 +339,7 @@ pipelines:
                 - |
                   printf "*New Version Staged for Production*\n# v${PACKAGE_JSON_VERSION} committed by ${COMMIT_AUTHOR}\n${LAST_COMMIT_LOG}\n\n" > /tmp/bot_message2.txt
                   npm i -g ts-node && ts-node tools/cicd/PrintChangedUrls.ts "HEAD~2" "$(cat /tmp/bot_url_web.txt || echo '')" "$(cat /tmp/bot_url_ui.txt || echo '')" >> /tmp/bot_message2.txt
+                  printf "\n" >> /tmp/bot_message2.txt
                   cat /tmp/bot_message.txt >> /tmp/bot_message2.txt || true
                   printf "\n" >> /tmp/bot_message2.txt
 
@@ -344,15 +365,3 @@ pipelines:
               -H "Expect:" \
               -H 'Content-Type: application/json; charset=utf-8' \
               --data-binary @-
-
-            # Post to Bitbucket PR
-            - |
-              curl https://api.bitbucket.org/2.0/repositories/pabau/monorepo/pullrequests/${BITBUCKET_PR_ID}/comments \
-                -H "Authorization: Bearer ${access_token}" \
-                --request POST \
-                --header 'Content-Type: application/json' \
-                --data '{
-                  "content": {
-                    "raw": "A new vercel was published!"
-                  }
-                }'
