--- a/hasura/.env.production
+++ b/hasura/.env.production
@@ -1,6 +1,6 @@
 # To edit any of these variables you can copy them into .env.production.local
 
-HASURA_GRAPHQL_ENDPOINT=https://api.new.pabau.com/v1/graphql
+HASURA_GRAPHQL_ENDPOINT=https://api.new.pabau.com/
 
 # Fill this in for "Execute Query" to prompt you whether to use production or development.
 HASURA_GRAPHQL_ADMIN_SECRET=
