--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,17 @@
-**/.env*.local
-package-lock.json
-apps/bridge-api/prisma/schema.yml
-/libs/graphql/**/generated
-
 # See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# Ignore .local's - To clarify, we allow .env's to be committed
+.env.local
+.env.*.local
+*.local.yml
+*.local.yaml
+
+# Lock files for major installers that we don't support
+package-lock.json
+pnpm-lock.yaml
+
+# Ignore generated files
+/libs/graphql/**/generated
 
 # compiled output
 /dist
@@ -11,7 +19,7 @@ apps/bridge-api/prisma/schema.yml
 /out-tsc
 
 # dependencies
-/node_modules
+node_modules/
 
 # IDEs and editors
 /.idea
@@ -96,9 +104,3 @@ buck-out/
 
 ## CocoaPods
 **/ios/Pods/
-
-## Nested node_modules
-
-node_modules/
-/apps/web/.env.local
-/apps/bridge-api/prisma/.env
