--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -4,6 +4,7 @@
     "graphql.vscode-graphql",
     "dbaeumer.vscode-eslint",
     "prisma.prisma",
-    "esbenp.prettier-vscode"
+    "esbenp.prettier-vscode",
+    "mikestead.dotenv"
   ]
 }
