--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -70,6 +70,8 @@ pipelines:
           #              - NODE_OPTIONS=--max_old_space_size=2222 yarn affected:test --base=HEAD~1 --parallel --maxParallel=2 --skip-nx-cache
           #              - NODE_OPTIONS=--max_old_space_size=1555 yarn affected:test --base=HEAD~1 --parallel --maxParallel=3 --skip-nx-cache
 
+      - parallel:
+
           - step:
               name: build
               runs-on:
@@ -82,17 +84,16 @@ pipelines:
               artifacts:
                 - dist/**
 
-      # - parallel:
 
-      #   - step:
-      #       size: 2x
-      #       name: e2e
-      #       caches:
-      #         - cypress
-      #       script:
-      #         - apt update -y && apt install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
-      #         - yarn cypress install || true
-      #         - yarn affected:e2e --base=HEAD~1 || true
+          - step:
+              size: 2x
+              name: e2e
+              caches:
+                - cypress
+              script:
+                - apt update -y && apt install -y libgtk2.0-0 libgtk-3-0 libgbm-dev libnotify-dev libgconf-2-4 libnss3 libxss1 libasound2 libxtst6 xauth xvfb
+                - yarn cypress install || true
+                - yarn affected:e2e --base=HEAD~1 || true
 
       #   - step:
       #       size: 2x
