CI: Remove similar task from graphql-inspector

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -50,7 +50,7 @@ pipelines:
                 - npm i -g @graphql-inspector/cli@2.5.0 graphql || true
                 - graphql-inspector validate "{libs,apps}/**/*.{graphql,tsx}" hasura/schema.graphql || true
                 - graphql-inspector coverage "{libs,apps}/**/*.{graphql,tsx}" hasura/schema.graphql || true
-                - graphql-inspector similar hasura/schema.graphql || true
+#                - graphql-inspector similar hasura/schema.graphql || true
                 - graphql-inspector diff 'git:origin/master:./hasura/schema.graphql' 'hasura/schema.graphql' || true
 
           - step:
@@ -227,10 +227,10 @@ pipelines:
                 - yarn lint:tsc --with-deps --base=HEAD~1
                 - yarn lint:ls || true
                 - yarn lint:workspace || true
-                - npm i -g @graphql-inspector/cli graphql || true
+                - npm i -g @graphql-inspector/cli@2.5.0 graphql || true
                 - graphql-inspector validate "{libs,apps}/**/*.{graphql,tsx}" hasura/schema.graphql || true
                 - graphql-inspector coverage "{libs,apps}/**/*.{graphql,tsx}" hasura/schema.graphql || true
-                - graphql-inspector similar hasura/schema.graphql || true
+#                - graphql-inspector similar hasura/schema.graphql || true
                 - graphql-inspector diff 'git:origin/master:./hasura/schema.graphql' 'hasura/schema.graphql' || true
 
           - step:
