--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -62,6 +62,8 @@ pipelines:
 
           - step:
               name: unit tests
+              runs-on:
+                - 'self.hosted'
               max-time: 35
               script:
                 # - yarn postinstall || yarn --frozen-lockfile
