--- a/package.json
+++ b/package.json
@@ -175,8 +175,9 @@
   },
   "devDependencies": {
     "@babel/core": "7.13.10",
+    "@babel/plugin-proposal-private-property-in-object": "^7.14.0",
     "@babel/plugin-transform-runtime": "7.13.10",
-    "@babel/preset-env": "7.14.1",
+    "@babel/preset-env": "7.12.11",
     "@babel/preset-react": "7.12.13",
     "@babel/preset-typescript": "7.13.0",
     "@graphql-codegen/add": "2.0.2",
@@ -205,7 +206,7 @@
     "@nrwl/node": "12.0.8",
     "@nrwl/react": "12.0.8",
     "@nrwl/react-native": "11.4.1",
-    "@nrwl/storybook": "12.0.8",
+    "@nrwl/storybook": "12.3.4",
     "@nrwl/tao": "12.0.8",
     "@nrwl/web": "12.0.8",
     "@nrwl/workspace": "12.0.8",
