[skip ci] CI: change self-hosted for announce - we need access_token

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -62,7 +62,10 @@ pipelines:
 
           - step:
               name: unit tests
-              max-time: 35
+              runs-on:
+                - 'self.hosted'
+              max-time: 40
+              size: 2x
               script:
                 # - yarn postinstall || yarn --frozen-lockfile
                 - NODE_OPTIONS=--max_old_space_size=3333 yarn affected:test --base=origin/master
@@ -107,8 +110,6 @@ pipelines:
 
       - step:
           name: deploy previews
-          runs-on:
-            - 'self.hosted'
           max-time: 20
           script:
             - ls -al . || true
@@ -244,9 +245,10 @@ pipelines:
 
           - step:
               name: unit tests
-              max-time: 35
               runs-on:
                 - 'self.hosted'
+              max-time: 40
+              size: 2x
               script:
                 # - yarn postinstall || yarn --frozen-lockfile
                 - NODE_OPTIONS=--max_old_space_size=3333 yarn affected:test --base=HEAD~1
