CI: reduce conflicts on schema.graphql & scan for all docs in libs

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,3 @@
 yarn.lock binary merge=ours
 package-lock.json binary merge=ours
-graphql.schema.json binary
-remote-schema.graphql binary
+hasura/schema.graphql binary
