--- a/codegen.yml
+++ b/codegen.yml
@@ -1,7 +1,6 @@
-
 overwrite: true
 schema: hasura/schema.graphql
-documents: ['libs/graphql/*.graphql', 'libs/graphql/crm-mutation']
+documents: ['libs/graphql/**/*.graphql']
 generates:
   hasura/schema.json:
     plugins:
