--- a/hasura/metadata/databases/default/tables/public_product_news.yaml
+++ b/hasura/metadata/databases/default/tables/public_product_news.yaml
@@ -16,53 +16,57 @@ insert_permissions:
     backend_only: false
     check: {}
     columns:
+    - created_at
+    - description
     - id
     - img
     - link
-    - description
-    - title
     - order
-    - created_at
+    - sent_to
+    - title
     - updated_at
   role: public
 - permission:
     backend_only: false
     check: {}
     columns:
-    - order
+    - created_at
     - description
+    - id
     - img
     - link
+    - order
+    - sent_to
     - title
-    - created_at
     - updated_at
-    - id
   role: user
 select_permissions:
 - permission:
     allow_aggregations: true
     columns:
-    - order
+    - created_at
     - description
+    - id
     - img
     - link
+    - order
+    - sent_to
     - title
-    - created_at
     - updated_at
-    - id
     filter: {}
   role: public
 - permission:
     allow_aggregations: true
     columns:
-    - order
+    - created_at
     - description
+    - id
     - img
     - link
+    - order
+    - sent_to
     - title
-    - created_at
     - updated_at
-    - id
     filter: {}
   role: user
 update_permissions:
