--- a/hasura/metadata/databases/default/tables/public_contacts.yaml
+++ b/hasura/metadata/databases/default/tables/public_contacts.yaml
@@ -1,6 +1,19 @@
 table:
   name: contacts
   schema: public
+insert_permissions:
+- permission:
+    backend_only: false
+    check: {}
+    columns:
+    - id
+    - created_at
+    - updated_at
+    - first_name
+    - last_name
+    - client_id
+    - mobile_number
+  role: public
 select_permissions:
 - permission:
     columns:
@@ -13,3 +26,15 @@ select_permissions:
     - id
     filter: {}
   role: public
+- permission:
+    allow_aggregations: true
+    columns:
+    - mobile_number
+    - client_id
+    - first_name
+    - last_name
+    - created_at
+    - updated_at
+    - id
+    filter: {}
+  role: user
