--- a/package.json
+++ b/package.json
@@ -23,14 +23,14 @@
     "web:start": "nx serve web",
     "start:linux": "yarn dev:linux",
     "start:windows": "yarn dev:windows",
-    "dev": "concurrently -m 16 --kill-others-on-fail -n HASURA,HASURA-SEED,PRISMA,WEB,WEB-PRELOADER,LAUNCH-BROWSER,BACKEND -c red,red,green,blue,grey,grey,magenta \"delay 5 && yarn hasura:stop && docker-compose -f hasura/docker-compose.yml up -d postgres && wait-on -w 1200 http-get://localhost:4000 && yarn hasura:start\" \"delay 22 && wait-on -w 1200 http-get://localhost:8080/console && (yarn hasura:cli seeds apply --database-name default || echo 'Seed apply failed') && open-cli 'http://localhost:8080' && wait-on http://localhost:4200 && open-cli 'http://localhost:4200'\" \"yarn bridge:start\" \"delay 25 && yarn web:start\" \"delay 15 && wait-on tcp:4000 && wait-on http://localhost:4200\" \"delay 20 && wait-on http://localhost:4200\" \"yarn nx serve backend\"",
+    "dev": "concurrently -m 16 --kill-others-on-fail -n HASURA,HASURA-SEED,PRISMA,WEB,WEB-PRELOADER,LAUNCH-BROWSER,BACKEND -c red,red,green,blue,grey,grey,magenta \"yarn hasura:stop && docker-compose -f hasura/docker-compose.yml up -d postgres && wait-on -w 1200 http-get://localhost:4000 && yarn hasura:start\" \"wait-on -w 1200 http-get://localhost:8080/console && (yarn hasura:cli seeds apply --database-name default || echo 'Seed apply failed') && open-cli 'http://localhost:8080' && wait-on http://localhost:4200 && open-cli 'http://localhost:4200'\" \"yarn bridge:start\" \"yarn web:start\" \"wait-on tcp:4000 && wait-on http://localhost:4200\" \"wait-on http://localhost:4200\" \"yarn nx serve backend\"",
     "dev:light": "concurrently \"nx serve web\" \"nx serve bridge-api\"",
     "dev:windows": "echo DEPRICATED - Just call 'dev' from now && yarn dev",
     "dev:linux": "echo DEPRICATED - Just call 'dev' from now && yarn dev",
     "bridge:start": "nx serve bridge-api",
     "hasura:start": "run-script-os",
-    "hasura:start:default": "docker-compose -f hasura/docker-compose.yml up -d postgres && delay 10 && docker-compose -f hasura/docker-compose.yml up --force-recreate graphql-engine",
-    "hasura:start:linux": "docker-compose -f hasura/docker-compose.linux.yml up -d postgres && delay 10 && docker-compose -f hasura/docker-compose.linux.yml up --force-recreate graphql-engine",
+    "hasura:start:default": "docker-compose -f hasura/docker-compose.yml up -d postgres && docker-compose -f hasura/docker-compose.yml up --force-recreate graphql-engine",
+    "hasura:start:linux": "docker-compose -f hasura/docker-compose.linux.yml up -d postgres && docker-compose -f hasura/docker-compose.linux.yml up --force-recreate graphql-engine",
     "hasura:stop": "docker-compose -f hasura/docker-compose.yml down -t 5",
     "hasura:clean": "docker-compose -f hasura/docker-compose.yml down -v",
     "hasura:export": "yarn hasura:cli metadata export && yarn apollo client:download-schema hasura/schema.graphql && yarn graphql-codegen",
@@ -68,17 +68,18 @@
     "postinstall": "concurrently -n HUSKY,PRISMA,GRAPHQL-CODEGEN -c yellow,green \"husky install\" \"prisma generate\" graphql-codegen"
   },
   "resolutions": {
-    "**/immer": "8.0.1",
-    "**/prismjs": "1.23.0",
-    "**/ssri": "8.0.1",
-    "**/hosted-git-info": "3.0.8",
+    "**/immer": ">=8.0.1",
+    "**/prismjs": ">=1.23.0",
+    "**/ssri": ">=8.0.1",
+    "**/hosted-git-info": ">=3.0.8",
     "**/lodash": ">=4.17.21",
     "**/underscore": ">=1.12.1",
     "**/trim": ">=0.0.3",
     "**/dns-packet": ">=5.2.2",
     "**/css-what": ">=5.0.1",
-    "**/trim-newlines": ">=4.0.1",
-    "**/normalize-url": ">=6.0.1"
+    "ts-node-dev/**/meow": ">=10.0.1",
+    "**/cssnano": ">=5.0.6",
+    "**/mini-css-extract-plugin": ">=1.6.0"
   },
   "dependencies": {
     "@anchan828/nest-sendgrid": "0.4.19",
@@ -105,7 +106,6 @@
     "cookie-session": "1.4.0",
     "cross-env": "^7.0.3",
     "dayjs": "^1.10.4",
-    "delay-cli": "1.1.0",
     "document-register-element": "1.14.10",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
