--- a/hasura/metadata/databases/default/tables/public_chat.yaml
+++ b/hasura/metadata/databases/default/tables/public_chat.yaml
@@ -1,6 +1,10 @@
 table:
   name: chat
   schema: public
+object_relationships:
+- name: chat_room
+  using:
+    foreign_key_constraint_on: to_channel
 remote_relationships:
 - definition:
     hasura_fields:
