--- a/hasura/metadata/databases/default/tables/public_chat_room.yaml
+++ b/hasura/metadata/databases/default/tables/public_chat_room.yaml
@@ -9,6 +9,13 @@ array_relationships:
       table:
         name: chat_room_participant
         schema: public
+- name: chats
+  using:
+    foreign_key_constraint_on:
+      column: to_channel
+      table:
+        name: chat
+        schema: public
 insert_permissions:
 - permission:
     backend_only: false
