--- a/hasura/metadata/databases/default/tables/public_chat.yaml
+++ b/hasura/metadata/databases/default/tables/public_chat.yaml
@@ -2,9 +2,15 @@ table:
   name: chat
   schema: public
 object_relationships:
-- name: chat_room
+- name: room
   using:
-    foreign_key_constraint_on: to_channel
+    manual_configuration:
+      column_mapping:
+        to_channel: id
+      insertion_order: null
+      remote_table:
+        name: chat_room
+        schema: public
 remote_relationships:
 - definition:
     hasura_fields:
