--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "bridge:start": "nx serve bridge-api",
     "hasura:start": "run-script-os",
     "hasura:start:default": "docker-compose -f hasura/docker-compose.yml up -d postgres && docker-compose -f hasura/docker-compose.yml up --force-recreate graphql-engine",
-    "hasura:start:linux": "docker-compose -f hasura/docker-compose.yml -f hasura/docker-compose.linux.yml up -d postgres && docker-compose -f hasura/docker-compose.linux.yml up --force-recreate graphql-engine",
+    "hasura:start:linux": "docker-compose -f hasura/docker-compose.yml -f hasura/docker-compose.linux.yml up -d postgres && docker-compose -f hasura/docker-compose.yml -f hasura/docker-compose.linux.yml up --force-recreate graphql-engine",
     "hasura:stop": "docker-compose -f hasura/docker-compose.yml down -t 5",
     "hasura:clean": "docker-compose -f hasura/docker-compose.yml down -v",
     "hasura:export": "yarn hasura:cli metadata export && yarn apollo client:download-schema hasura/schema.graphql && yarn graphql-codegen",
@@ -276,7 +276,7 @@
     "micromatch": "^4.0.4",
     "next-page-tester": "0.24.1",
     "prettier": "2.2.1",
-    "prisma": "2.22.1",
+    "prisma": "2.23.0",
     "prisma-json-schema-generator": "1.2.2",
     "react-cookie": "4.0.3",
     "react-docgen-typescript": "1.22.0",
@@ -285,7 +285,7 @@
     "run-script-os": "^1.1.6",
     "ts-jest": "26.5.6",
     "ts-node": "9.1.1",
-    "typescript": "4.2.4",
+    "typescript": "^4.3.3",
     "vercel": "22.0.1",
     "yaml-loader": "0.6.0"
   },
