--- a/hasura/metadata/databases/default/tables/public_chat_room_participant.yaml
+++ b/hasura/metadata/databases/default/tables/public_chat_room_participant.yaml
@@ -39,3 +39,10 @@ update_permissions:
         company:
           _eq: X-Hasura-Org-Id
   role: user
+delete_permissions:
+- permission:
+    filter:
+      room:
+        company:
+          _eq: X-Hasura-Org-Id
+  role: user
