--- a/package.json
+++ b/package.json
@@ -33,8 +33,9 @@
     "hasura:start:linux": "docker-compose -f hasura/docker-compose.yml -f hasura/docker-compose.linux.yml up -d postgres && docker-compose -f hasura/docker-compose.yml -f hasura/docker-compose.linux.yml up --force-recreate graphql-engine",
     "hasura:stop": "docker-compose -f hasura/docker-compose.yml down -t 5",
     "hasura:clean": "docker-compose -f hasura/docker-compose.yml down -v",
-    "hasura:export": "yarn hasura:cli metadata export && yarn apollo client:download-schema hasura/schema.graphql && yarn graphql-codegen",
+    "hasura:export": "yarn hasura:cli metadata export && yarn hasura:cli migrate create delete_me --from-server --database-name default && yarn apollo client:download-schema hasura/schema.graphql && yarn graphql-codegen",
     "graphql-codegen": "graphql-codegen",
+    "production:web": "env-cmd -f apps/web/.env.production nx serve",
     "production:start": "nx affected --uncommitted=true --target=export && npx serve dist/apps/web/exported",
     "build": "pwd && ls -al && rm -rf public/ && nx build backend --no-cache && cp -rf dist/apps/backend/ public/ && cp apps/backend/vercel.json public/ && cp package.json public/",
     "pipeline-checks": "yarn --pure-lockfile --prefer-offline && yarn lint:workspace && yarn nx affected --all --target=tsc --parallel --skip-nx-cache && yarn nx affected --all --target=lint --parallel --skip-nx-cache && yarn nx affected --all --target=test --parallel --skip-nx-cache",
