--- a/.graphqlconfig
+++ b/.graphqlconfig
@@ -1,23 +1,23 @@
 {
   "name": "hasura",
-  "schemaPath": "./hasura/schema.graphql",
+  "schemaPath": "./schema.graphql",
   "extensions": {
     "endpoints": {
       "production": {
-        "url": "https://api.new.pabau.com.com/v1/graphql",
+        "url": "https://api.new.pabau.com/v1/graphql",
         "headers": {
-          "Authorization": "Bearer ${env:GITHUB-ACCESS-TOKEN}",
+          "X-Hasura-Admin-Secret": "${env:HASURA_GRAPHQL_ADMIN_SECRET}",
           "user-agent": "JS GraphQL"
         },
-        "introspect": false
+        "introspect": true
       },
       "local": {
         "url": "http://localhost:8080/v1/graphql",
         "headers": {
-          "Authorization": "Bearer ${env:HASURA_GRAPHQL_ADMIN_SECRET}",
+          "X-Hasura-Admin-Secret": "1234",
           "user-agent": "JS GraphQL"
         },
-        "introspect": false
+        "introspect": true
       }
     }
   },
