--- a/package.json
+++ b/package.json
@@ -12,29 +12,31 @@
     ]
   },
   "scripts": {
-    "nx": "cross-env NODE_OPTIONS='--max-old-space-size=4096' nx",
+    "nx": "cross-env NODE_OPTIONS='--max-old-space-size=5000' nx",
     "serve": "nx serve",
     "vercel": "vercel",
     "apollo": "ts-node tools/cli/apollo.ts",
     "build:bridge-api": "nx export bridge-api",
     "hasura:cli": "ts-node tools/cli/hasura.ts",
+    "hasura:refresh-metadata": "ts-node tools/cli/hasura-refresh-metadata.ts",
     "nest": "cd apps/backend && nest",
     "clean": "rimraf **/node_modules yarn.lock package-lock.json",
-    "web:start": "nx serve web",
+    "web:start": "yarn nodemon -x \"yarn nx serve || touch apps/web/next.config.js\" -e '' -w 'apps/web/next.config.js'",
     "start:linux": "yarn dev:linux",
     "start:windows": "yarn dev:windows",
-    "dev": "concurrently -m 16 --kill-others-on-fail -n HASURA,HASURA-SEED,PRISMA,WEB,WEB-PRELOADER,LAUNCH-BROWSER,BACKEND -c red,red,green,blue,grey,grey,magenta \"yarn hasura:stop && docker-compose -f hasura/docker-compose.yml up -d postgres && wait-on -w 1200 http-get://localhost:4000 && yarn hasura:start\" \"wait-on -w 1200 http-get://localhost:8080/console && (yarn hasura:cli seeds apply --database-name default || echo 'Seed apply failed') && open-cli 'http://localhost:8080' && wait-on http://localhost:4200 && open-cli 'http://localhost:4200'\" \"yarn bridge:start\" \"yarn web:start\" \"wait-on tcp:4000 && wait-on http://localhost:4200\" \"wait-on http://localhost:4200\" \"yarn nx serve backend\"",
+    "dev": "concurrently -m 16 --kill-others-on-fail -n GRAPHQL-CODEGEN,HASURA,PRISMA,HASURA-METADATA,WEB,WEB-PRELOADER,LAUNCH-BROWSER,BACKEND -c yellow,red,green,grey,blue,grey,grey,magenta \"yarn graphql-codegen:watch\" \"echo HASURA && docker-compose -f hasura/docker-compose.yml up -d postgres && yarn hasura:start && wait-on -w 1200 http-get://localhost:4000 && yarn hasura:start\" \"echo PRISMA && yarn bridge:start\" \"wait-on -w 1200 http-get://localhost:4000 && echo BRIDGE NOW ALIVE && wait-on -w 1200 http-get://localhost:8080/console && echo HASURA AND BRIDGE ALIVE && yarn hasura:refresh-metadata && echo OPEN HASURA IN CHROME && open-cli \\\"http://hasura.localhost:8080\\\"\" \"yarn web:start\" \"wait-on tcp:4000 && wait-on -w 1200 http-get://localhost:8080/console && wait-on http://localhost:4200 && open-cli \\\"http://web.localhost:4200\\\"\" \"wait-on http://localhost:4200\" \"yarn nx serve backend\"",
     "dev:light": "concurrently \"nx serve web\" \"nx serve bridge-api\"",
     "dev:windows": "echo DEPRICATED - Just call 'dev' from now && yarn dev",
     "dev:linux": "echo DEPRICATED - Just call 'dev' from now && yarn dev",
     "bridge:start": "nx serve bridge-api",
     "hasura:start": "run-script-os",
-    "hasura:start:default": "docker-compose -f hasura/docker-compose.yml up -d postgres && docker-compose -f hasura/docker-compose.yml up --force-recreate graphql-engine",
-    "hasura:start:linux": "docker-compose -f hasura/docker-compose.yml -f hasura/docker-compose.linux.yml up -d postgres && docker-compose -f hasura/docker-compose.yml -f hasura/docker-compose.linux.yml up --force-recreate graphql-engine",
+    "hasura:start:default": "docker-compose -f hasura/docker-compose.yml up -d postgres && docker-compose -f hasura/docker-compose.yml up graphql-engine",
+    "hasura:start:linux": "docker-compose -f hasura/docker-compose.yml -f hasura/docker-compose.linux.yml up -d postgres && docker-compose -f hasura/docker-compose.yml -f hasura/docker-compose.linux.yml up graphql-engine",
     "hasura:stop": "docker-compose -f hasura/docker-compose.yml down -t 5",
     "hasura:clean": "docker-compose -f hasura/docker-compose.yml down -v",
-    "hasura:export": "yarn hasura:cli metadata export && yarn hasura:cli migrate create delete_me --from-server --database-name default && yarn apollo client:download-schema hasura/schema.graphql && yarn graphql-codegen",
+    "hasura:export": "yarn hasura:cli metadata export && yarn hasura:cli migrate create delete_me --from-server --database-name default && yarn apollo client:download-schema schema.graphql && yarn graphql-codegen",
     "graphql-codegen": "graphql-codegen",
+    "graphql-codegen:watch": "nodemon -w libs/graphql -x graphql-codegen -e graphql",
     "production:web": "env-cmd -f apps/web/.env.production nx serve",
     "production:start": "nx affected --uncommitted=true --target=export && npx serve dist/apps/web/exported",
     "build": "pwd && ls -al && rm -rf public/ && nx build backend --no-cache && cp -rf dist/apps/backend/ public/ && cp apps/backend/vercel.json public/ && cp package.json public/",
@@ -276,6 +278,7 @@
     "metro-react-native-babel-preset": "0.65.2",
     "micromatch": "^4.0.4",
     "next-page-tester": "0.24.1",
+    "nodemon": "^2.0.7",
     "prettier": "2.2.1",
     "prisma": "2.23.0",
     "prisma-json-schema-generator": "1.2.2",
