--- a/hasura/metadata/databases/default/tables/public_product_news.yaml
+++ b/hasura/metadata/databases/default/tables/public_product_news.yaml
@@ -42,6 +42,7 @@ insert_permissions:
   role: user
 select_permissions:
 - permission:
+    allow_aggregations: true
     columns:
     - created_at
     - description
