--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "hasura:refresh-metadata": "ts-node tools/cli/hasura-refresh-metadata.ts",
     "nest": "cd apps/backend && nest",
     "clean": "rimraf **/node_modules yarn.lock package-lock.json",
-    "web:start": "yarn nodemon -x \"yarn nx serve || touch apps/web/next.config.js\" -e '' -w 'apps/web/next.config.js'",
+    "web:start": "yarn nodemon -x \"yarn nx serve || shx touch apps/web/next.config.js\" -e '' -w 'apps/web/next.config.js'",
     "start:linux": "yarn dev:linux",
     "start:windows": "yarn dev:windows",
     "dev": "concurrently -m 16 --kill-others-on-fail -n GRAPHQL-CODEGEN,HASURA,PRISMA,HASURA-METADATA,WEB,WEB-PRELOADER,LAUNCH-BROWSER,BACKEND -c yellow,red,green,grey,blue,grey,grey,magenta \"yarn graphql-codegen:watch\" \"echo HASURA && docker-compose -f hasura/docker-compose.yml up -d postgres && yarn hasura:start && wait-on -w 1200 http-get://localhost:4000 && yarn hasura:start\" \"echo PRISMA && yarn bridge:start\" \"wait-on -w 1200 http-get://localhost:4000 && echo BRIDGE NOW ALIVE && wait-on -w 1200 http-get://localhost:8080/console && echo HASURA AND BRIDGE ALIVE && yarn hasura:refresh-metadata && echo OPEN HASURA IN CHROME && open-cli \\\"http://hasura.localhost:8080\\\"\" \"yarn web:start\" \"wait-on tcp:4000 && wait-on -w 1200 http-get://localhost:8080/console && wait-on http://localhost:4200 && open-cli \\\"http://web.localhost:4200\\\"\" \"wait-on http://localhost:4200\" \"yarn nx serve backend\"",
@@ -34,7 +34,7 @@
     "hasura:start:linux": "docker-compose -f hasura/docker-compose.linux.yml up -d postgres && docker-compose -f hasura/docker-compose.yml -f hasura/docker-compose.linux.yml up graphql-engine",
     "hasura:stop": "docker-compose -f hasura/docker-compose.yml down -t 5",
     "hasura:clean": "docker-compose -f hasura/docker-compose.yml down -v",
-    "hasura:export": "yarn hasura:cli metadata export && yarn hasura:cli migrate create delete_me --from-server --database-name default && yarn apollo client:download-schema schema.graphql && yarn graphql-codegen",
+    "hasura:export": "yarn hasura:cli metadata export && yarn hasura:cli migrate create delete_me --from-server --database-name default && yarn apollo client:download-schema hasura/schema.graphql && yarn graphql-codegen",
     "graphql-codegen": "graphql-codegen",
     "graphql-codegen:watch": "nodemon -w libs/graphql -x graphql-codegen -e graphql",
     "production:web": "env-cmd -f apps/web/.env.production nx serve",
@@ -243,9 +243,10 @@
     "@types/react-dom": "17.0.4",
     "@types/react-grid-layout": "1.1.1",
     "@types/react-native": "0.64.5",
+    "@types/shelljs": "^0.8.8",
     "@types/webpack": "5.28.0",
-    "@typescript-eslint/eslint-plugin": "4.23.0",
-    "@typescript-eslint/parser": "4.23.0",
+    "@typescript-eslint/eslint-plugin": "4.28.0",
+    "@typescript-eslint/parser": "4.28.0",
     "@vercel/node": "1.10.0",
     "apollo-server-testing": "2.24.0",
     "babel-jest": "26.6.3",
@@ -256,20 +257,20 @@
     "danger": "^10.6.4",
     "dotenv": "9.0.2",
     "dotenv-flow": "^3.2.0",
-    "eslint": "7.26.0",
+    "eslint": "7.29.0",
     "eslint-config-canonical": "26.2.3",
     "eslint-config-prettier": "8.3.0",
     "eslint-plugin-cypress": "2.11.3",
     "eslint-plugin-graphql": "4.0.0",
-    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-import": "2.23.4",
     "eslint-plugin-json-format": "^2.0.1",
     "eslint-plugin-jsx-a11y": "6.4.1",
     "eslint-plugin-prettier": "3.4.0",
-    "eslint-plugin-react": "7.23.2",
+    "eslint-plugin-react": "7.24.0",
     "eslint-plugin-react-hooks": "4.2.0",
     "eslint-plugin-sonarjs": "0.7.0",
     "eslint-plugin-tsdoc": "^0.2.14",
-    "eslint-plugin-you-dont-need-lodash-underscore": "6.11.0",
+    "eslint-plugin-you-dont-need-lodash-underscore": "6.12.0",
     "graphql-shield": "7.5.0",
     "husky": "5.2.0",
     "jest": "26.6.3",
@@ -278,9 +279,9 @@
     "metro-react-native-babel-preset": "0.65.2",
     "micromatch": "^4.0.4",
     "next-page-tester": "0.24.1",
+    "nodemon": "^2.0.7",
     "patch-package": "^6.4.7",
     "postinstall-postinstall": "^2.1.0",
-    "nodemon": "^2.0.7",
     "prettier": "2.2.1",
     "prisma": "2.23.0",
     "prisma-json-schema-generator": "1.2.2",
@@ -289,6 +290,7 @@
     "react-test-renderer": "17.0.2",
     "rimraf": "^3.0.2",
     "run-script-os": "^1.1.6",
+    "shelljs": "^0.8.4",
     "ts-jest": "26.5.6",
     "ts-node": "9.1.1",
     "typescript": "^4.3.3",
