--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "web:start": "yarn nodemon -x \"yarn nx serve || shx touch apps/web/next.config.js\" -e '' -w 'apps/web/next.config.js'",
     "start:linux": "yarn dev:linux",
     "start:windows": "yarn dev:windows",
-    "dev": "concurrently -m 16 --kill-others-on-fail -n GRAPHQL-CODEGEN,HASURA,PRISMA,HASURA-METADATA,WEB,WEB-PRELOADER,LAUNCH-BROWSER,BACKEND -c yellow,red,green,grey,blue,grey,grey,magenta \"yarn graphql-codegen:watch\" \"echo HASURA && docker-compose -f hasura/docker-compose.yml up -d postgres && yarn hasura:start && wait-on -w 1200 http-get://localhost:4000 && yarn hasura:start\" \"echo PRISMA && yarn bridge:start\" \"wait-on -w 1200 http-get://localhost:4000 && echo BRIDGE NOW ALIVE && wait-on -w 1200 http-get://localhost:8080/console && echo HASURA AND BRIDGE ALIVE && yarn hasura:refresh-metadata && echo OPEN HASURA IN CHROME && open-cli \\\"http://hasura.localhost:8080\\\"\" \"yarn web:start\" \"wait-on tcp:4000 && wait-on -w 1200 http-get://localhost:8080/console && wait-on http://localhost:4200 && open-cli \\\"http://web.localhost:4200\\\"\" \"wait-on http://localhost:4200\" \"yarn nx serve backend\"",
+    "dev": "concurrently -m 16 --kill-others-on-fail -n GRAPHQL-CODEGEN,HASURA,PRISMA,HASURA-METADATA,WEB,WEB-PRELOADER,LAUNCH-BROWSER,BACKEND -c yellow,red,green,grey,blue,grey,grey,magenta \"yarn graphql-codegen:watch\" \"echo HASURA && docker-compose -f hasura/docker-compose.yml up -d postgres && yarn hasura:start && wait-on -w 1200 http-get://localhost:4000 && yarn hasura:start\" \"echo PRISMA && yarn bridge:start\" \"wait-on -w 1200 http-get://localhost:4000 && echo BRIDGE NOW ALIVE && wait-on -w 1200 http-get://localhost:8080/console && echo HASURA AND BRIDGE ALIVE && yarn hasura:cli metadata reload && yarn hasura:cli console\" \"yarn web:start\" \"wait-on tcp:4000 && wait-on -w 1200 http-get://localhost:8080/console && wait-on http://localhost:4200 && open-cli \\\"http://web.localhost:4200\\\"\" \"wait-on http://localhost:4200\" \"yarn nx serve backend\"",
     "dev:light": "concurrently \"nx serve web\" \"nx serve bridge-api\"",
     "dev:windows": "echo DEPRICATED - Just call 'dev' from now && yarn dev",
     "dev:linux": "echo DEPRICATED - Just call 'dev' from now && yarn dev",
@@ -34,7 +34,7 @@
     "hasura:start:linux": "docker-compose -f hasura/docker-compose.linux.yml up -d postgres && docker-compose -f hasura/docker-compose.yml -f hasura/docker-compose.linux.yml up graphql-engine",
     "hasura:stop": "docker-compose -f hasura/docker-compose.yml down -t 5",
     "hasura:clean": "docker-compose -f hasura/docker-compose.yml down -v",
-    "hasura:export": "yarn hasura:cli metadata export && yarn hasura:cli migrate create delete_me --from-server --database-name default && yarn apollo client:download-schema hasura/schema.graphql && yarn graphql-codegen",
+    "hasura:export": "yarn hasura:cli metadata export && yarn apollo client:download-schema hasura/schema.graphql && yarn graphql-codegen",
     "graphql-codegen": "graphql-codegen",
     "graphql-codegen:watch": "nodemon -w libs/graphql -x graphql-codegen -e graphql",
     "production:web": "env-cmd -f apps/web/.env.production nx serve",
