--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
     "web:start": "yarn nodemon -x \"yarn nx serve || shx touch apps/web/next.config.js\" -e '' -w 'apps/web/next.config.js'",
     "start:linux": "yarn dev:linux",
     "start:windows": "yarn dev:windows",
-    "dev": "concurrently -m 16 --kill-others-on-fail -n GRAPHQL-CODEGEN,HASURA,PRISMA,HASURA-METADATA,WEB,WEB-PRELOADER,LAUNCH-BROWSER,BACKEND -c yellow,red,green,grey,blue,grey,grey,magenta \"yarn graphql-codegen:watch\" \"echo HASURA && docker-compose -f hasura/docker-compose.yml up -d postgres && yarn hasura:start && wait-on -w 1200 http-get://localhost:4000 && yarn hasura:start\" \"echo PRISMA && yarn bridge:start\" \"wait-on -w 1200 http-get://localhost:4000 && echo BRIDGE NOW ALIVE && wait-on -w 1200 http-get://localhost:8080/console && echo HASURA AND BRIDGE ALIVE && yarn hasura:cli metadata reload && yarn hasura:cli console\" \"yarn web:start\" \"wait-on tcp:4000 && wait-on -w 1200 http-get://localhost:8080/console && wait-on http://localhost:4200 && open-cli \\\"http://web.localhost:4200\\\"\" \"wait-on http://localhost:4200\" \"yarn nx serve backend\"",
+    "dev": "concurrently -m 16 --kill-others-on-fail -n GRAPHQL-CODEGEN,HASURA,PRISMA,HASURA-METADATA,WEB,WEB-PRELOADER,LAUNCH-BROWSER,BACKEND -c yellow,red,green,grey,blue,grey,grey,magenta \"yarn graphql-codegen:watch\" \"yarn hasura:start\" \"yarn bridge:start\" \"wait-on -w 1200 http-get://localhost:4000 && echo BRIDGE NOW ALIVE && wait-on -w 1200 http-get://localhost:8080/console && echo HASURA AND BRIDGE ALIVE && yarn hasura:cli metadata reload && yarn hasura:cli console\" \"yarn web:start\" \"wait-on tcp:4000 && wait-on -w 1200 http-get://localhost:8080/console && wait-on http://localhost:4200 && open-cli \\\"http://web.localhost:4200\\\"\" \"wait-on http://localhost:4200\" \"yarn nx serve backend\"",
     "dev:light": "concurrently \"nx serve web\" \"nx serve bridge-api\"",
     "dev:windows": "echo DEPRICATED - Just call 'dev' from now && yarn dev",
     "dev:linux": "echo DEPRICATED - Just call 'dev' from now && yarn dev",
     "bridge:start": "nx serve bridge-api",
     "hasura:start": "run-script-os",
-    "hasura:start:default": "docker-compose -f hasura/docker-compose.yml up -d postgres && docker-compose -f hasura/docker-compose.yml up graphql-engine",
-    "hasura:start:linux": "docker-compose -f hasura/docker-compose.linux.yml up -d postgres && docker-compose -f hasura/docker-compose.yml -f hasura/docker-compose.linux.yml up graphql-engine",
-    "hasura:stop": "docker-compose -f hasura/docker-compose.yml down -t 5",
-    "hasura:clean": "docker-compose -f hasura/docker-compose.yml down -v",
+    "hasura:start:default": "docker compose -f hasura/docker-compose.yml up -d postgres && docker compose -f hasura/docker-compose.yml up -d graphql-engine && docker compose -f hasura/docker-compose.yml logs --tail 100 -f",
+    "hasura:start:linux": "docker compose -f hasura/docker-compose.linux.yml up -d postgres && docker compose -f hasura/docker-compose.yml -f hasura/docker-compose.linux.yml up graphql-engine",
+    "hasura:stop": "docker compose -f hasura/docker-compose.yml down -t 5",
+    "hasura:clean": "docker compose -f hasura/docker-compose.yml down -v",
     "hasura:export": "yarn hasura:cli metadata export && yarn apollo client:download-schema hasura/schema.graphql && yarn graphql-codegen",
     "graphql-codegen": "graphql-codegen",
     "graphql-codegen:watch": "nodemon -w libs/graphql -x graphql-codegen -e graphql",
@@ -276,6 +276,7 @@
     "husky": "5.2.0",
     "jest": "26.6.3",
     "jest-react-native": "18.0.0",
+    "jest-silent-reporter": "^0.5.0",
     "lint-staged": "^11.0.0",
     "metro-react-native-babel-preset": "0.65.2",
     "micromatch": "^4.0.4",
